# supplier-app

./: .env  README.md  compose.yaml
app/: Dockerfile  pii_supplier_masking_app.py  pyproject.toml
mssql_server/: Dockerfile  configure-db.sh  setup.sql
